# B4Lecture-2021

./: .gitignore  PULL_REQUEST_TEMPLATE.md  README.md  TIPS.md  Tips.md
ex01/k_okamori/: ex01_okamori.py
ex01/y_okaji/: main.py
ex02/k_okamori/: ex02_okamori.py
ex03/k_okamori/: ex03_okamori.py
ex05/k_okamori/: ex05_k_means_okamori.py  ex05_mfcc_okamori.py
ex1/sehunkim/: ex01_Kim.py  ex01_Kim_1.01.py  test1.py
ex_02/k_nobata/: ex_02.py
ex_1/: README.md  main.py  test.py
ex_1/a_miyashita/: main.py
ex_1/haopeng_geng/: main.py
ex_1/kajiwara/: .gitignore  amplitude_db.ipynb  bench.py  check.ipynb  consideration.ipynb  fast_stft.ipynb  main.py  requirements.txt
ex_1/t_suzuki/: ex_1.py  pyproject.toml  spectrogram.py
ex_1/t_yamamoto/: main.py  requirements.txt
ex_1/y_okaji/: main.py
ex_2/: README.md
ex_2/a_miyashita/: main.py
ex_2/haopeng_geng/: README.md  filter_module.py  main.py
ex_2/hashizume/: EX2.py
ex_2/k_okamori/: ex01_okamori.py  ex02_okamori.py
ex_2/kajiwara/: .gitignore  main.py  requirement.txt
ex_2/sehun_kim/: main.py
ex_2/t_suzuki/: ex_2.py  graphics.py  pyproject.toml  spectrogram.py
ex_2/t_yamamoto/: ex2.py  filters.py  mkfig.py
ex_3/: README.md
ex_3/a_miyashita/: main.py
ex_3/k_nobata/: ex3.py
ex_3/t_suzuki/: compare_by_d.py  ex_3.py  ex_3_compare.py  pyproject.toml
ex_4/: README.md
ex_5/: README.md  data3.csv  k_means.py  mel_spec.py
ex_5/t_suzuki/: ex_5_kmeans.py  ex_5_mfcc.py  pyproject.toml  spectrogram.py
ex_5/t_suzuki/audio/: source.aifc
ex_5/t_suzuki/jupyter/: clustering_compare_executions.ipynb  clustering_compare_time.ipynb
ex_6/: README.md
ex_7/: README.md
ex_8/: README.md
(+69 files in other folders)
