[tool.poetry]
name = "t_suzuki"
version = "0.1.0"
description = ""
authors = ["Tomohiro Suzuki"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
matplotlib = "^3.4.2"
librosa = "^0.8.0"
SoundFile = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
