[tool.poetry]
name = "ex_3"
version = "0.1.0"
description = ""
authors = ["Tomohiro Suzuki <suzuki.tomohiro@g.sp.m.is.nagoya-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
