[tool.poetry]
name = "ex_5"
version = "0.1.0"
description = ""
authors = ["Tomohiro Suzuki <suzuki.tomohiro@g.sp.m.is.nagoya-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.2"
numpy = "^1.20.3"
scipy = "1.6.1"
librosa = "^0.8.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
